[gd_scene load_steps=11 format=4 uid="uid://bp1th31aar6d4"]

[ext_resource type="Script" uid="uid://bsnb8032mibp5" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://baeupmwvx1kib" path="res://scenes/player/player.tscn" id="2_lnu2h"]
[ext_resource type="Texture2D" uid="uid://bb5uogctpos7y" path="res://resources/maps/icon.png" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://cpv6d2vojbwjl" path="res://scripts/UI/esc_menu.gd" id="3_iywne"]
[ext_resource type="Texture2D" uid="uid://bj7l18fpqbdkv" path="res://resources/maps/map1.png" id="3_lbhrr"]
[ext_resource type="PackedScene" uid="uid://buafe3kxce2c2" path="res://scenes/ui/multiplayer.tscn" id="4_p57ef"]
[ext_resource type="PackedScene" uid="uid://1ry85xqrtjd3" path="res://scenes/ui/setting.tscn" id="4_u5sy4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lnu2h"]
texture = ExtResource("2_yqjtg")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="TileSet" id="TileSet_lbhrr"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lnu2h")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(252.371, 95.5841)

[node name="Game" type="Node2D"]
script = ExtResource("1_lnu2h")
player_scene = ExtResource("2_lnu2h")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PortDisplayInGame" type="MarginContainer" parent="UI"]
visible = false
custom_minimum_size = Vector2(0, 200)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="PortInGame" type="Label" parent="UI/PortDisplayInGame"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="PortDisplay" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 50

[node name="Port" type="Label" parent="UI/PortDisplay"]
custom_minimum_size = Vector2(500, 450)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1

[node name="ESCMenu" type="PanelContainer" parent="UI"]
visible = false
custom_minimum_size = Vector2(300, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_iywne")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ESCMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="seperator" type="Control" parent="UI/ESCMenu/VBoxContainer"]
layout_mode = 2

[node name="MenuTitle" type="Label" parent="UI/ESCMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="seperator2" type="Control" parent="UI/ESCMenu/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="UI/ESCMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Continue"

[node name="seperator3" type="Control" parent="UI/ESCMenu/VBoxContainer"]
layout_mode = 2

[node name="SettingButton" type="Button" parent="UI/ESCMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Setting
"

[node name="seperator4" type="Control" parent="UI/ESCMenu/VBoxContainer"]
layout_mode = 2

[node name="LeaveButton" type="Button" parent="UI/ESCMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Leave"

[node name="Setting" parent="UI" instance=ExtResource("4_u5sy4")]
visible = false

[node name="multiplayer" parent="UI" instance=ExtResource("4_p57ef")]
visible = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://baeupmwvx1kib")
spawn_path = NodePath("..")

[node name="Level" type="TileMapLayer" parent="."]
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AADo/9//AAAAAAAAAADp/9//AAAAAAAAAADq/9//AAAAAAAAAADr/9//AAAAAAAAAADs/9//AAAAAAAAAADt/9//AAAAAAAAAADu/9//AAAAAAAAAADv/9//AAAAAAAAAADw/9//AAAAAAAAAADx/9//AAAAAAAAAADy/9//AAAAAAAAAADz/9//AAAAAAAAAAD0/9//AAAAAAAAAAD1/9//AAAAAAAAAAD2/9//AAAAAAAAAAD3/9//AAAAAAAAAAD4/9//AAAAAAAAAAD5/9//AAAAAAAAAAD6/9//AAAAAAAAAAD7/9//AAAAAAAAAAD8/9//AAAAAAAAAAD9/9//AAAAAAAAAAD+/9//AAAAAAAAAAD//9//AAAAAAAAAAAAAN//AAAAAAAAAAABAN//AAAAAAAAAAACAN//AAAAAAAAAAADAN//AAAAAAAAAAAEAN//AAAAAAAAAAAFAN//AAAAAAAAAAAGAN//AAAAAAAAAAAHAN//AAAAAAAAAAAIAN//AAAAAAAAAAAJAN//AAAAAAAAAAAKAN//AAAAAAAAAAALAN//AAAAAAAAAAAMAN//AAAAAAAAAAANAN//AAAAAAAAAAAOAN//AAAAAAAAAAAPAN//AAAAAAAAAAAQAN//AAAAAAAAAAARAN//AAAAAAAAAAASAN//AAAAAAAAAAATAN//AAAAAAAAAAAUAN//AAAAAAAAAAAVAN//AAAAAAAAAAAWAN//AAAAAAAAAAAXAN//AAAAAAAAAAAXAOD/AAAAAAAAAAAYAOD/AAAAAAAAAAAYAOH/AAAAAAAAAAAYAOL/AAAAAAAAAAAYAOP/AAAAAAAAAAAZAOP/AAAAAAAAAAAZAOT/AAAAAAAAAAAaAOT/AAAAAAAAAAAaAOX/AAAAAAAAAAAbAOX/AAAAAAAAAAAbAOb/AAAAAAAAAAAbAOf/AAAAAAAAAAAbAOj/AAAAAAAAAAAcAOj/AAAAAAAAAAAdAOj/AAAAAAAAAAAeAOj/AAAAAAAAAAAfAOj/AAAAAAAAAAAgAOj/AAAAAAAAAAAhAOj/AAAAAAAAAAAiAOj/AAAAAAAAAAAjAOj/AAAAAAAAAAAkAOj/AAAAAAAAAAAlAOj/AAAAAAAAAAAmAOj/AAAAAAAAAAAnAOj/AAAAAAAAAAAoAOj/AAAAAAAAAAApAOj/AAAAAAAAAAAqAOj/AAAAAAAAAAArAOj/AAAAAAAAAAAsAOj/AAAAAAAAAAAtAOj/AAAAAAAAAAAuAOj/AAAAAAAAAAAvAOj/AAAAAAAAAAAwAOj/AAAAAAAAAAAxAOj/AAAAAAAAAAAyAOj/AAAAAAAAAAAzAOj/AAAAAAAAAAA0AOj/AAAAAAAAAAA0AOn/AAAAAAAAAAA1AOn/AAAAAAAAAAA1AOr/AAAAAAAAAAA1AOv/AAAAAAAAAAA1AOz/AAAAAAAAAAA2AOz/AAAAAAAAAAA2AO3/AAAAAAAAAAA2AO7/AAAAAAAAAAA3AO7/AAAAAAAAAAA2AO//AAAAAAAAAAA3AO//AAAAAAAAAAA3APD/AAAAAAAAAAA3APH/AAAAAAAAAAA4APH/AAAAAAAAAAA5APH/AAAAAAAAAAA6APH/AAAAAAAAAAA7APH/AAAAAAAAAAA8APH/AAAAAAAAAAA9APH/AAAAAAAAAAA+APH/AAAAAAAAAAA/APH/AAAAAAAAAABAAPH/AAAAAAAAAABBAPH/AAAAAAAAAABCAPH/AAAAAAAAAABDAPH/AAAAAAAAAABEAPH/AAAAAAAAAABFAPH/AAAAAAAAAABGAPH/AAAAAAAAAABHAPH/AAAAAAAAAABIAPH/AAAAAAAAAABJAPH/AAAAAAAAAABKAPH/AAAAAAAAAABLAPH/AAAAAAAAAABMAPH/AAAAAAAAAABNAPH/AAAAAAAAAABOAPH/AAAAAAAAAABPAPH/AAAAAAAAAABQAPH/AAAAAAAAAABRAPH/AAAAAAAAAABSAPH/AAAAAAAAAABTAPH/AAAAAAAAAABUAPH/AAAAAAAAAABVAPH/AAAAAAAAAABWAPH/AAAAAAAAAABXAPH/AAAAAAAAAABYAPH/AAAAAAAAAABZAPH/AAAAAAAAAABaAPH/AAAAAAAAAABbAPH/AAAAAAAAAABcAPH/AAAAAAAAAABdAPH/AAAAAAAAAABeAPH/AAAAAAAAAABfAPH/AAAAAAAAAABgAPH/AAAAAAAAAABhAPH/AAAAAAAAAABiAPH/AAAAAAAAAABjAPH/AAAAAAAAAABkAPH/AAAAAAAAAABlAPH/AAAAAAAAAABmAPH/AAAAAAAAAABnAPH/AAAAAAAAAABoAPH/AAAAAAAAAABpAPH/AAAAAAAAAABqAPH/AAAAAAAAAABrAPH/AAAAAAAAAABsAPH/AAAAAAAAAABtAPH/AAAAAAAAAABuAPH/AAAAAAAAAABvAPH/AAAAAAAAAABwAPH/AAAAAAAAAABxAPH/AAAAAAAAAAByAPH/AAAAAAAAAABzAPH/AAAAAAAAAAB0APH/AAAAAAAAAAB1APH/AAAAAAAAAAB2APH/AAAAAAAAAAB3APH/AAAAAAAAAAB4APH/AAAAAAAAAAB5APH/AAAAAAAAAAB6APH/AAAAAAAAAAB7APH/AAAAAAAAAAB8APH/AAAAAAAAAAB9APH/AAAAAAAAAAB+APH/AAAAAAAAAAB/APH/AAAAAAAAAACAAPH/AAAAAAAAAACBAPH/AAAAAAAAAACCAPH/AAAAAAAAAACDAPH/AAAAAAAAAACEAPH/AAAAAAAAAACFAPH/AAAAAAAAAACGAPH/AAAAAAAAAACHAPH/AAAAAAAAAACIAPH/AAAAAAAAAACJAPH/AAAAAAAAAACKAPH/AAAAAAAAAACLAPH/AAAAAAAAAACMAPH/AAAAAAAAAACNAPH/AAAAAAAAAACOAPH/AAAAAAAAAACPAPH/AAAAAAAAAACQAPH/AAAAAAAAAACRAPH/AAAAAAAAAACSAPH/AAAAAAAAAACTAPH/AAAAAAAAAACUAPH/AAAAAAAAAACVAPH/AAAAAAAAAACWAPH/AAAAAAAAAACXAPH/AAAAAAAAAACYAPH/AAAAAAAAAACZAPH/AAAAAAAAAACaAPH/AAAAAAAAAACbAPH/AAAAAAAAAACcAPH/AAAAAAAAAACdAPH/AAAAAAAAAACeAPH/AAAAAAAAAACfAPH/AAAAAAAAAACgAPH/AAAAAAAAAAChAPH/AAAAAAAAAACiAPH/AAAAAAAAAACjAPH/AAAAAAAAAACkAPH/AAAAAAAAAAClAPH/AAAAAAAAAACmAPH/AAAAAAAAAACnAPH/AAAAAAAAAACoAPH/AAAAAAAAAACpAPH/AAAAAAAAAACqAPH/AAAAAAAAAACrAPH/AAAAAAAAAACsAPH/AAAAAAAAAACtAPH/AAAAAAAAAACuAPH/AAAAAAAAAACvAPH/AAAAAAAAAACwAPH/AAAAAAAAAACvAPD/AAAAAAAAAACvAO//AAAAAAAAAACvAO7/AAAAAAAAAACwAO7/AAAAAAAAAACwAO3/AAAAAAAAAACwAOz/AAAAAAAAAACxAOz/AAAAAAAAAACxAOv/AAAAAAAAAACyAOv/AAAAAAAAAACzAOv/AAAAAAAAAAC0AOv/AAAAAAAAAAC1AOv/AAAAAAAAAAC2AOv/AAAAAAAAAAC3AOv/AAAAAAAAAAC4AOv/AAAAAAAAAAC5AOv/AAAAAAAAAAC6AOv/AAAAAAAAAAC7AOv/AAAAAAAAAAC8AOv/AAAAAAAAAAC9AOv/AAAAAAAAAAC+AOv/AAAAAAAAAAC/AOv/AAAAAAAAAADAAOv/AAAAAAAAAADBAOv/AAAAAAAAAADCAOv/AAAAAAAAAADDAOv/AAAAAAAAAADEAOv/AAAAAAAAAADFAOv/AAAAAAAAAADGAOv/AAAAAAAAAADHAOv/AAAAAAAAAADIAOv/AAAAAAAAAADJAOv/AAAAAAAAAADKAOv/AAAAAAAAAADLAOv/AAAAAAAAAADMAOv/AAAAAAAAAADo/+D/AAAAAAAAAADn/+D/AAAAAAAAAADn/+H/AAAAAAAAAADn/+L/AAAAAAAAAADm/+L/AAAAAAAAAADm/+P/AAAAAAAAAADm/+T/AAAAAAAAAADl/+T/AAAAAAAAAADl/+X/AAAAAAAAAADl/+b/AAAAAAAAAADk/+b/AAAAAAAAAADk/+f/AAAAAAAAAADk/+j/AAAAAAAAAADj/+j/AAAAAAAAAADi/+j/AAAAAAAAAADh/+j/AAAAAAAAAADg/+j/AAAAAAAAAADf/+j/AAAAAAAAAADe/+j/AAAAAAAAAADd/+j/AAAAAAAAAADc/+j/AAAAAAAAAADb/+j/AAAAAAAAAADa/+j/AAAAAAAAAADZ/+j/AAAAAAAAAADY/+j/AAAAAAAAAADX/+j/AAAAAAAAAADW/+j/AAAAAAAAAADV/+j/AAAAAAAAAADU/+j/AAAAAAAAAADT/+j/AAAAAAAAAADS/+j/AAAAAAAAAADR/+j/AAAAAAAAAADQ/+j/AAAAAAAAAADP/+j/AAAAAAAAAADO/+j/AAAAAAAAAADN/+j/AAAAAAAAAADM/+j/AAAAAAAAAADL/+j/AAAAAAAAAADL/+n/AAAAAAAAAADL/+r/AAAAAAAAAADK/+r/AAAAAAAAAADK/+v/AAAAAAAAAADK/+z/AAAAAAAAAADK/+3/AAAAAAAAAADJ/+3/AAAAAAAAAADJ/+7/AAAAAAAAAADJ/+//AAAAAAAAAADI/+//AAAAAAAAAADI//D/AAAAAAAAAADI//H/AAAAAAAAAABR//H/AAAAAAAAAABS//H/AAAAAAAAAABT//H/AAAAAAAAAABU//H/AAAAAAAAAABV//H/AAAAAAAAAABW//H/AAAAAAAAAABX//H/AAAAAAAAAABY//H/AAAAAAAAAABZ//H/AAAAAAAAAABa//H/AAAAAAAAAABb//H/AAAAAAAAAABc//H/AAAAAAAAAABd//H/AAAAAAAAAABe//H/AAAAAAAAAABf//H/AAAAAAAAAABg//H/AAAAAAAAAABh//H/AAAAAAAAAABi//H/AAAAAAAAAABj//H/AAAAAAAAAABk//H/AAAAAAAAAABl//H/AAAAAAAAAABm//H/AAAAAAAAAABn//H/AAAAAAAAAABo//H/AAAAAAAAAABp//H/AAAAAAAAAABq//H/AAAAAAAAAABr//H/AAAAAAAAAABs//H/AAAAAAAAAABt//H/AAAAAAAAAABu//H/AAAAAAAAAABv//H/AAAAAAAAAABw//H/AAAAAAAAAABx//H/AAAAAAAAAABy//H/AAAAAAAAAABz//H/AAAAAAAAAAB0//H/AAAAAAAAAAB1//H/AAAAAAAAAAB2//H/AAAAAAAAAAB3//H/AAAAAAAAAAB4//H/AAAAAAAAAAB5//H/AAAAAAAAAAB6//H/AAAAAAAAAAB7//H/AAAAAAAAAAB8//H/AAAAAAAAAAB9//H/AAAAAAAAAAB+//H/AAAAAAAAAAB///H/AAAAAAAAAACA//H/AAAAAAAAAACB//H/AAAAAAAAAACC//H/AAAAAAAAAACD//H/AAAAAAAAAACE//H/AAAAAAAAAACF//H/AAAAAAAAAACG//H/AAAAAAAAAACH//H/AAAAAAAAAACI//H/AAAAAAAAAACJ//H/AAAAAAAAAACK//H/AAAAAAAAAACL//H/AAAAAAAAAACM//H/AAAAAAAAAACN//H/AAAAAAAAAACO//H/AAAAAAAAAACP//H/AAAAAAAAAACQ//H/AAAAAAAAAACR//H/AAAAAAAAAACS//H/AAAAAAAAAACT//H/AAAAAAAAAACU//H/AAAAAAAAAACV//H/AAAAAAAAAACW//H/AAAAAAAAAACX//H/AAAAAAAAAACY//H/AAAAAAAAAACZ//H/AAAAAAAAAACa//H/AAAAAAAAAACb//H/AAAAAAAAAACc//H/AAAAAAAAAACd//H/AAAAAAAAAACe//H/AAAAAAAAAACf//H/AAAAAAAAAACg//H/AAAAAAAAAACh//H/AAAAAAAAAACi//H/AAAAAAAAAACj//H/AAAAAAAAAACk//H/AAAAAAAAAACl//H/AAAAAAAAAACm//H/AAAAAAAAAACn//H/AAAAAAAAAACo//H/AAAAAAAAAACp//H/AAAAAAAAAACq//H/AAAAAAAAAACr//H/AAAAAAAAAACs//H/AAAAAAAAAACt//H/AAAAAAAAAACu//H/AAAAAAAAAACv//H/AAAAAAAAAACw//H/AAAAAAAAAACx//H/AAAAAAAAAACy//H/AAAAAAAAAACz//H/AAAAAAAAAAC0//H/AAAAAAAAAAC1//H/AAAAAAAAAAC2//H/AAAAAAAAAAC3//H/AAAAAAAAAAC4//H/AAAAAAAAAAC5//H/AAAAAAAAAAC6//H/AAAAAAAAAAC7//H/AAAAAAAAAAC8//H/AAAAAAAAAAC9//H/AAAAAAAAAAC+//H/AAAAAAAAAAC///H/AAAAAAAAAADA//H/AAAAAAAAAADB//H/AAAAAAAAAADC//H/AAAAAAAAAADD//H/AAAAAAAAAADE//H/AAAAAAAAAADF//H/AAAAAAAAAADG//H/AAAAAAAAAADH//H/AAAAAAAAAABQ//H/AAAAAAAAAABQ//D/AAAAAAAAAABQ/+//AAAAAAAAAABP/+//AAAAAAAAAABP/+7/AAAAAAAAAABP/+3/AAAAAAAAAABO/+3/AAAAAAAAAABO/+z/AAAAAAAAAABO/+v/AAAAAAAAAABN/+v/AAAAAAAAAABM/+v/AAAAAAAAAABL/+v/AAAAAAAAAABK/+v/AAAAAAAAAABJ/+v/AAAAAAAAAABI/+v/AAAAAAAAAABH/+v/AAAAAAAAAABG/+v/AAAAAAAAAABF/+v/AAAAAAAAAABE/+v/AAAAAAAAAABD/+v/AAAAAAAAAABC/+v/AAAAAAAAAABB/+v/AAAAAAAAAABA/+v/AAAAAAAAAAA//+v/AAAAAAAAAAA+/+v/AAAAAAAAAAA9/+v/AAAAAAAAAAA8/+v/AAAAAAAAAAA7/+v/AAAAAAAAAAA6/+v/AAAAAAAAAAA5/+v/AAAAAAAAAAA4/+v/AAAAAAAAAAA3/+v/AAAAAAAAAAA2/+v/AAAAAAAAAAA1/+v/AAAAAAAAAAA0/+v/AAAAAAAAAAAz/+v/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_lbhrr")

[node name="SpwnPoint" type="Marker2D" parent="Level"]
position = Vector2(649, -228)

[node name="SpwnPoint2" type="Marker2D" parent="Level"]
position = Vector2(-584, -217)

[node name="SpwnPoint3" type="Marker2D" parent="Level"]
position = Vector2(-52, -379)

[node name="Map1" type="Sprite2D" parent="."]
position = Vector2(818, -205)
scale = Vector2(1.61962, 1.60507)
texture = ExtResource("3_lbhrr")

[node name="Map2" type="Sprite2D" parent="."]
position = Vector2(-820, -205)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_lbhrr")
flip_h = true

[node name="Player" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(-714, -273)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(-211.999, -203.043)
rotation = -0.671982

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_u5sy4")

[connection signal="pressed" from="UI/ESCMenu/VBoxContainer/ContinueButton" to="UI/ESCMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="UI/ESCMenu/VBoxContainer/SettingButton" to="UI/ESCMenu" method="_on_setting_button_pressed"]
[connection signal="pressed" from="UI/ESCMenu/VBoxContainer/LeaveButton" to="UI/ESCMenu" method="_on_leave_button_pressed"]
